tests/type-checking/assign-and-list/assign-list/assign_int_list_list_list_list_list_none_fail.xdsl
// RUN: choco-opt -p check-assign-target,name-analysis,type-checking %s | filecheck %s

// 
// l: [[[int]]] = None
// l = [[None]]
// 


builtin.module() {
  choco.ast.program() {
    choco.ast.var_def() {
      choco.ast.typed_var() ["var_name" = "l"] {
        choco.ast.list_type() {
          choco.ast.list_type() {
            choco.ast.list_type() {
              choco.ast.type_name() ["type_name" = "int"]
            }
          }
        }
      }
    } {
      choco.ast.literal() ["value" = !choco.ast.none]
    }
  } {
    choco.ast.assign() {
      choco.ast.id_expr() ["id" = "l"]
    } {
      choco.ast.list_expr() {
        choco.ast.list_expr() {
          choco.ast.literal() ["value" = !choco.ast.none]
        }
      }
    }
  }
}
// CHECK: Semantic error:
